connected to real data from electron

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -55,6 +55,7 @@
   "answers": "Отговори",
   "application": "Приложение",
   "arbitrary_message": "Произволно съобщение",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Заявка за продажба",
   "ask_order_cancellation": "Отмяна заявка за продажба",
   "ask_order_id": "Заявка за продажба ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Искате ли да изберете своя собствена парола-фраза? Щракнете тук.",
   "clear_results": "Изчисти резултатите",
   "clear_search_results": "Изчисти резултата от търсенето",
+  "click_for_changes": "Кликнете тук, за да видите какво се е променило",
   "click_here_for_help": "Кликнете тук, за да научите повече за него",
   "click_here_to_enable": "Натиснете тук за разрешаване.",
   "click_to_claim": "Кликнете тук, за да поискате безплатния Burst.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Copy Asset Link",
   "copy_send_burst_link": "Copy 'Send BURST' Link",
   "copy_send_message_link": "Copy 'Send Message' Link",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Създай анкета",
   "create_your_account": "Създайте сметка",
   "current_price": "Текуща цена",
   "current_quantity": "Текущо количество",
+  "current_version": "Сегашна версия",
   "dashboard": "Основно табло",
   "data": "Данни",
   "data_is_encrypted": "Данните са криптирани.",
@@ -202,7 +206,8 @@
   "discount": "Отстъпка",
   "do_not_broadcast": "Не излъчвай",
   "do_not_delete": "Не, не изтривай",
-  "download_brs": "Download BRS",
+  "domain": "домейн",
+  "download": "Изтегли",
   "downloaded": "Изтеглено",
   "downloaded_hash": "Изтеглени хеш",
   "downloaded_volume": "Изтеглен обем",
@@ -454,6 +459,7 @@
   "generation_signature": "Създаване на подпис",
   "generator": "Генератор",
   "generator_public_key": "Генератор публичен ключ",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Дайте обратна връзка",
   "give_feedback_q": "Обратна връзка?",
   "goods": "Стоки",
@@ -486,6 +492,7 @@
   "is_scanning": "Сканира се",
   "issue_asset": "Издаване актив",
   "issue_asset_warning": "След като бъде изпратена, вие няма да можете да промените тази информация отново никога. Уверете се, че е правилна.",
+  "issuer": "Емитент",
   "item_name": "Име на артикула",
   "language": "Език",
   "last_block": "Последен блок",
@@ -554,6 +561,10 @@
   "new_price": "Нова цена",
   "new_q_create_account": "Нов? Създайте своя сметка!",
   "new_quantity": "Ново количество",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Нова версия",
   "newest_products": "Най-новите продукти",
   "news": "Новини",
   "news_section_disabled": "Секцията новини в момента не е активна.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Не са намерени сделки",
   "no_transactions_in_block": "Няма сделки в този блок.",
   "no_transactions_yet": "Все още няма сделки.",
+  "non_verified_source": "Неизвестен, потенциално несигурен източник",
   "none": "Няма",
   "not_delivered_in_time": "Не доставен навреме",
   "not_forging": "Не кове",
@@ -620,6 +632,7 @@
   "open_orders": "Отворени поръчки",
   "option_x": "вариант __x__",
   "options_are_binary": "Опциите са двоични",
+  "or": "or",
   "order": "Заявка",
   "order_date": "Дата на поръчка",
   "order_description": "Описание на поръчка",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "Публичният ключ на тази сметка е вече обявен. Вместо него използвайте ID на сметката.",
   "recipient_unknown": "Сметката на получателя е неизвестна, което означава, че никога не е имала входяща или изходяща сделки. Моля проверете адреса на получателя преди това.",
   "recipient_unknown_pka": "Сметката на получателя е от неизвестен тип, което означава, че никога не е имала входяща или изходяща операция. Можете да увеличите защитата чрез предоставяне публичен ключ на получателя.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Пълен хеш на свързана сделка",
   "referenced_transaction_hash": "Хеш на свързана сделка",
   "refund": "Възстанови средства",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Непотвърдена сделка",
   "unconfirmed_transactions": "Непотвърдени сделки",
   "unknown": "Неизвестно",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Неподписани сделки байта",
   "up_to_date_peers": "Актуални партньори",
   "update": "Актуализиране",
   "update_account_info": "Актуализирай информацията за сметката",
   "update_alias": "Актуализирай псевдоним",
-  "update_available": "Нова BRS версия е достъпна. Препоръчително е, да актуализирате.",
+  "update_available": "Налице е нова актуализация",
   "update_beta_available": "Нова експериментална версия е достъпна. Не се препоръчва да я инсталирате, освен ако не знаете какво правите.",
   "update_blockchain_downloading": "Блокверигата все още се изтегля, проверете отново след като се актуализира.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Актуализиране на контакт",
   "update_multiple_available": "Обща и тестова версия са налични. Не се препоръчва да инсталирате тестова версия, ако не знаете какво правите.",
   "update_testnet": "BRS не може да се актуализира, докато е свързан към testnet.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Потребителят няма активи.",
   "user_no_transactions": "Потребителят няма никакви сделки.",
   "valid": "Валиден",
+  "valid_thru": "Валидно до",
   "validate": "Провери",
   "validate_token": "Проверка на маркер",
   "value_in_burst": "Value in BURST",
+  "verified_source": "Проверен и сигурен източник",
+  "verify": "Verify",
   "version": "Версия",
   "view_more": "Виж още",
   "view_owner_info_q": "Показване информация за собственик?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Вие предлагате този псевдоним за продажба.",
   "your_name": "Вашето име",
   "your_passphrase": "Вашата парола",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
