--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -55,6 +55,7 @@
   "answers": "Respostes",
   "application": "Aplicació",
   "arbitrary_message": "Missatge arbitrari",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Ordre de Venta",
   "ask_order_cancellation": "Demanar la Cancel·lació de l'Ordre",
   "ask_order_id": "Demana la ID de l'Ordre de venta",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Voleu triar la vostra contrasenya? Feu clic aquí.",
   "clear_results": "Netejar Resultats",
   "clear_search_results": "Netejar Resultats de Cerca",
+  "click_for_changes": "Feu clic aquí per veure què ha canviat",
   "click_here_for_help": "Feu clic aquí per saber-ne més",
   "click_here_to_enable": "Feu clic aquí per habilitar-lo.",
   "click_to_claim": "Feu clic aquí per reclamar la vostra explosió gratuïta.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Còpia l'Enllaç de l'Actiu",
   "copy_send_burst_link": "Còpia l'Enllaç \"Enviar burst\"",
   "copy_send_message_link": "Còpia l'Enllaç \"Enviar missatge\"",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Crear Enquesta",
   "create_your_account": "Crear el Teu Compte",
   "current_price": "Preu Actual",
   "current_quantity": "Quantitat Actual",
+  "current_version": "Versió actual",
   "dashboard": "Quadre de Control",
   "data": "Dades",
   "data_is_encrypted": "Les dades estan encriptades.",
@@ -202,7 +206,8 @@
   "discount": "Descompte",
   "do_not_broadcast": "No Difondre",
   "do_not_delete": "No, No Eliminar",
-  "download_brs": "Download BRS",
+  "domain": "Domini",
+  "download": "descarregar",
   "downloaded": "Descarregat",
   "downloaded_hash": "Hash Descarregat",
   "downloaded_volume": "Volum Descarregat",
@@ -454,6 +459,7 @@
   "generation_signature": "Generació de la signatura",
   "generator": "Generador",
   "generator_public_key": "Generar Clau Pública",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Fes-nos comentaris",
   "give_feedback_q": "Fer comentaris?",
   "goods": "Béns",
@@ -486,6 +492,7 @@
   "is_scanning": "Està Escannejant",
   "issue_asset": "Emetre un Actiu",
   "issue_asset_warning": "Un cop enviat, vostè no serà capaç de canviar aquesta informació mai més. Assegureu-vos de que és correcta.",
+  "issuer": "Emissor",
   "item_name": "Nom de l'Article",
   "language": "Llengua",
   "last_block": "Últim Bloc",
@@ -554,6 +561,10 @@
   "new_price": "Nou Preu",
   "new_q_create_account": "Nou? Creï el seu compte!",
   "new_quantity": "Nova Quantitat",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nova versió",
   "newest_products": "Nous productes",
   "news": "Notícies",
   "news_section_disabled": "La secció de notícies està inhabilida.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "No s'ha trobat cap transacció",
   "no_transactions_in_block": "Cap transacció en aquest bloc.",
   "no_transactions_yet": "Encara no hi ha cap transacció.",
+  "non_verified_source": "Font desconeguda i potencialment insegura",
   "none": "Cap",
   "not_delivered_in_time": "No lliurat a temps",
   "not_forging": "sense Forjar",
@@ -620,6 +632,7 @@
   "open_orders": "Ordres Pendents",
   "option_x": "opció __x__",
   "options_are_binary": "Les opcions són Binàries",
+  "or": "or",
   "order": "Ordre",
   "order_date": "Data de l'Ordre",
   "order_description": "Descripció de l'Ordre",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "Ja s'ha anunciat la clau pública d'aquest compte. Utilitzeu el ID del Compte.",
   "recipient_unknown": "El compte del destinatari és un compte desconegut, és a dir, que mai ha fet una transacció. Si us plau torneu a comprovar si el seu destinatari és correcte abans d'enviar.",
   "recipient_unknown_pka": "El compte del destinatari és un compte desconegut, és a dir, que no ha fet mai una transacció. Vostè pot augmentar la seguretat proporcionant la clau pública del destinatari.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Hash complert de la transacció de referència",
   "referenced_transaction_hash": "Transacció de Hash referenciada",
   "refund": "Reemborsament",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Transacció Sense Confirmar",
   "unconfirmed_transactions": "Transaccións Sense Confirmar",
   "unknown": "Desconegut",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Bytes de Transacció sense Firmar",
   "up_to_date_peers": "Parells Actualizats",
   "update": "Actualitzar",
   "update_account_info": "Actualitzar la Informació del Compte",
   "update_alias": "Actualització l'Àlies",
-  "update_available": "Hi ha una nova versió del BRS. Es recomana que actualitzi.",
+  "update_available": "Nova actualització disponible",
   "update_beta_available": "Hi ha una nova versió experimental. No es recomana que l'instal·leu llevat de que sapigueu el què esteu fent.",
   "update_blockchain_downloading": "La Cadena de Blocs s'està descarregant, torni a provar quan estigui actualitzada.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Actualitzar Contacte",
   "update_multiple_available": "Hi ha disponible una versió general i una experimental. No és recomanable que instal·leu la versió experimental llevat que sapigueu el què esteu fent.",
   "update_testnet": "No es pot actualitzar el BRS i al mateix temps estar connectat a la Testnet.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Aquest usuari té cap actiu.",
   "user_no_transactions": "Aquest usuari té cap transacció.",
   "valid": "Vàlid",
+  "valid_thru": "Vàlid a través",
   "validate": "Validar",
   "validate_token": "Validar Identificador",
   "value_in_burst": "Valor en burst",
+  "verified_source": "Font verificada i segura",
+  "verify": "Verify",
   "version": "Versió",
   "view_more": "Veure més",
   "view_owner_info_q": "Veure la informació del propietari?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Has posat aquest Àlies a la venta.",
   "your_name": "El vostre nom",
   "your_passphrase": "La vostre Contrasenya",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
