--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -55,6 +55,7 @@
   "answers": "Antworten",
   "application": "Anwendung",
   "arbitrary_message": "Beliebige Nachricht",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Verkaufsorder",
   "ask_order_cancellation": "Verkaufsorder stornieren",
   "ask_order_id": "Verkaufsorder-ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Möchten Sie Ihre eigene Passphrase wählen? Klicken Sie hier.",
   "clear_results": "Ergebnisse löschen",
   "clear_search_results": "Suchergebnisse löschen",
+  "click_for_changes": "Klicken Sie hier, um zu sehen, was sich geändert hat",
   "click_here_for_help": "Klicken Sie hier, um mehr darüber zu erfahren",
   "click_here_to_enable": "Klicken Sie zum Aktivieren hier.",
   "click_to_claim": "Klicken Sie hier, um Ihre kostenlosen Burst zu erhalten.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Asset-Link kopieren",
   "copy_send_burst_link": "'BURST senden'-Link kopieren",
   "copy_send_message_link": "'Nachricht senden'-Link kopieren",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Abstimmung erstellen",
   "create_your_account": "Erstellen Sie Ihr Konto",
   "current_price": "Aktueller Preis",
   "current_quantity": "Aktuelle Menge",
+  "current_version": "Aktuelle Version",
   "dashboard": "Dashboard",
   "data": "Daten",
   "data_is_encrypted": "Die Daten sind verschlüsselt.",
@@ -202,7 +206,8 @@
   "discount": "Rabatt",
   "do_not_broadcast": "Nicht veröffentlichen",
   "do_not_delete": "Nein, nicht löschen",
-  "download_brs": "BRS herunterladen",
+  "domain": "Domain",
+  "download": "Herunterladen",
   "downloaded": "Heruntergeladen",
   "downloaded_hash": "Heruntergeladener Hash",
   "downloaded_volume": "Heruntergeladenes Datenvolumen",
@@ -454,6 +459,7 @@
   "generation_signature": "Generierungshash",
   "generator": "Generator",
   "generator_public_key": "Öffentlicher Schlüssel des Generierers",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Feedback geben",
   "give_feedback_q": "Feedback geben?",
   "goods": "Artikel",
@@ -486,6 +492,7 @@
   "is_scanning": "Es wird gescannt.",
   "issue_asset": "Asset ausgeben",
   "issue_asset_warning": "Warnung: Nach dem Absenden können Sie diese Informationen nicht mehr ändern. Stellen Sie sicher, dass sie korrekt sind.",
+  "issuer": "Emittent",
   "item_name": "Artikelname",
   "language": "Sprache",
   "last_block": "Letzter Block",
@@ -554,6 +561,10 @@
   "new_price": "Neuer Preis",
   "new_q_create_account": "Neu hier? Erstellen Sie Ihr Konto!",
   "new_quantity": "Neue Menge",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Neue Version",
   "newest_products": "Neueste Artikel",
   "news": "News",
   "news_section_disabled": "Der News-Bereich ist derzeit deaktiviert.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Keine Transaktionen gefunden",
   "no_transactions_in_block": "Keine Transaktionen in diesem Block.",
   "no_transactions_yet": "Noch keine Transaktionen.",
+  "non_verified_source": "Unbekannte, möglicherweise unsichere Quelle",
   "none": "Keine",
   "not_delivered_in_time": "Nicht rechtzeitig geliefert",
   "not_forging": "Keine Blockgenerierung",
@@ -620,6 +632,7 @@
   "open_orders": "Offene Bestellungen",
   "option_x": "Option __x__",
   "options_are_binary": "Optionen sind binär",
+  "or": "or",
   "order": "Bestellung",
   "order_date": "Orderdatum",
   "order_description": "Orderbeschreibung",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "Der öffentliche Schlüssel dieses Kontos wurde bereits angekündigt. Verwenden Sie stattdessen die Konto-ID.",
   "recipient_unknown": "Das Empfängerkonto ist ein unbekanntes Konto. Das bedeutet, es verfügt über keine eingehenden oder ausgehenden Transaktionen. Bitte überprüfen Sie noch einmal die Empfängeradresse vor dem Absenden.",
   "recipient_unknown_pka": "Das Empfänger-Konto ist ein unbekanntes Konto, was bedeutet, dass es weder eingehende noch ausgehende Transaktion gehabt hat. Um diese Anforderung zu senden, müssen Sie den öffentlichen Schlüssel des Empfängers mit angeben.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Vollständiger Hash der Referenztransaktion",
   "referenced_transaction_hash": "Hash der Referenztransaktion",
   "refund": "Rückerstattung",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Unbestätigte Transaktion",
   "unconfirmed_transactions": "Unbestätigte Transaktionen",
   "unknown": "unbekannt",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Nicht signierte Transaktionsbytes",
   "up_to_date_peers": "Aktuelle Peers",
   "update": "Aktualisierung",
   "update_account_info": "Kontoinformationen aktualisieren",
   "update_alias": "Alias aktualisieren",
-  "update_available": "Eine neue BRS-Version ist verfügbar. Diese Aktualisierung wird empfohlen.",
+  "update_available": "Neues Update verfügbar",
   "update_beta_available": "Eine neue experimentelle Version ist verfügbar. Verwenden Sie diese Version nur, wenn Sie wissen, was Sie tun.",
   "update_blockchain_downloading": "Die Blockchain wird derzeit heruntergeladen. Versuchen Sie es noch einmal, sobald die Blockchain heruntergeladen wurde.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Kontakt aktualisieren",
   "update_multiple_available": "Es sind sowohl eine stabile als auch eine experimentelle Version verfügbar. Verwenden Sie die experimentelle Version nur, wenn Sie wissen, was Sie tun.",
   "update_testnet": "BRS kann nicht aktualisiert werden, während es mit dem Testnet verbunden ist.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Dieser Benutzer hat keine Assets.",
   "user_no_transactions": "Dieser Benutzer hat keine Transaktionen.",
   "valid": "Gültig",
+  "valid_thru": "Gültig bis",
   "validate": "Validieren",
   "validate_token": "Token validieren",
   "value_in_burst": "Wert in BURST",
+  "verified_source": "Verifizierte und sichere Quelle",
+  "verify": "Verify",
   "version": "Version",
   "view_more": "Mehr anzeigen",
   "view_owner_info_q": "Informationen über den Inhaber anschauen?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Sie bieten diesen Alias zum Kauf an.",
   "your_name": "Ihr Name",
   "your_passphrase": "Ihre Passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
