--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -55,6 +55,7 @@
   "answers": "Απαντήσεις",
   "application": "Εφαρμογή",
   "arbitrary_message": "Arbitrary Message",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Εντολή ζήτησης",
   "ask_order_cancellation": "ακύρωση εντολής ζητήσης",
   "ask_order_id": "Ask Order ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Θέλετε να επιλέξετε τη δική σας φράση πρόσβασης; Κάντε κλικ εδώ.",
   "clear_results": "Διαγραφή αποτελέσματων",
   "clear_search_results": "διαγραφή αποτελεσμάτων αναζήτησης",
+  "click_for_changes": "Κάντε κλικ εδώ για να δείτε τι άλλαξε",
   "click_here_for_help": "Κάντε κλικ εδώ για να μάθετε περισσότερα για αυτό",
   "click_here_to_enable": "Κάντε κλικ εδώ για να το ενεργοποιήσετε.",
   "click_to_claim": "Κάντε κλικ εδώ για να διεκδικήσετε τη δωρεάν έκρηξη.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Αντιγραφή του σύνδεσμου μετοχής",
   "copy_send_burst_link": "Αντιγραφή του συνδέσμου \"Αποστολή burst\"",
   "copy_send_message_link": "Αντιγραφή του σύνδεσμου \"Αποστολή μηνύματος\"",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Δημιουργία δημοσκόπησης",
   "create_your_account": "Δημιουργία του λογαριασμού σας",
   "current_price": "Τρέχουσα τιμή",
   "current_quantity": "Τρέχουσα ποσότητα",
+  "current_version": "Τρέχουσα έκδοση",
   "dashboard": "Πίνακας Ελέγχου",
   "data": "Δεδομένα",
   "data_is_encrypted": "Τα δεδομένα είναι κρυπτογραφημένα.",
@@ -202,7 +206,8 @@
   "discount": "Έκπτωση",
   "do_not_broadcast": "Να μη μεταδοθούν",
   "do_not_delete": "Όχι, να μή διαγράφει",
-  "download_brs": "Download BRS",
+  "domain": "Τομέα",
+  "download": "Κατεβάστε",
   "downloaded": "Κατεβασμένο",
   "downloaded_hash": "φορτωμένα Hash",
   "downloaded_volume": "Φορτομένος όγκος",
@@ -454,6 +459,7 @@
   "generation_signature": "Υπογραφή δημιουργίας",
   "generator": "Γεννήτρια",
   "generator_public_key": "Generator Public Key",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Θέλετε να δώσετε αξιολόγηση;",
   "give_feedback_q": "Θέλετε να δώσετε απάντηση ή αξιολόγηση;",
   "goods": "Αγαθά",
@@ -486,6 +492,7 @@
   "is_scanning": "υπό σάρωση",
   "issue_asset": "Θέμα μετοχής",
   "issue_asset_warning": "Warning: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
+  "issuer": "Εκδότης",
   "item_name": "Όνομα αγαθού",
   "language": "Γλώσσα",
   "last_block": "Τελευταίο μπλοκ",
@@ -554,6 +561,10 @@
   "new_price": "Νέα τιμή",
   "new_q_create_account": "Πρώτη φορά εδώ; Δημιούργησε τον λογαριασμού σου!",
   "new_quantity": "Νέα ποσότητα",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Νέα έκδοση",
   "newest_products": "Newest Products",
   "news": "Ειδήσεις",
   "news_section_disabled": "Το τμήμα ειδήσεων είναι απενεργοποιημένο.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "No transactions found",
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "Δεν υπάρχουν συναλλαγές ακόμα.",
+  "non_verified_source": "Άγνωστη, δυνητικά ανασφαλής πηγή",
   "none": "Τίποτα",
   "not_delivered_in_time": "Δεν παραδόθηκε εγκαίρως",
   "not_forging": "Not Forging",
@@ -620,6 +632,7 @@
   "open_orders": "Ανεκτέλεστα εντάλματα",
   "option_x": "option __x__",
   "options_are_binary": "Οι επιλογές είναι δυαδικές",
+  "or": "or",
   "order": "Εντολή",
   "order_date": "Ημερομηνία εντολής",
   "order_description": "Περιγραφή εντολής",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Πλήρη Hash αναφερόμενης συναλλαγής",
   "referenced_transaction_hash": "Συσχετισμένο Hash της συναλλαγής",
   "refund": "Επιστροφή",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Ανεπιβεβαίωτη συναλλαγή",
   "unconfirmed_transactions": "Unconfirmed Transactions",
   "unknown": "Άγνωστο",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Ανυπόγραφα Bytes συναλλαγής",
   "up_to_date_peers": "Ενημερωμένοi κόμβοι",
   "update": "Ενημέρωση",
   "update_account_info": "Update Account Info",
   "update_alias": "Ενημέρωση ψευδώνυμου",
-  "update_available": "Μια νέα έκδοση BRS είναι διαθέσιμη. Συνιστάται να ενημερώνετε.",
+  "update_available": "Υπάρχει διαθέσιμη νέα ενημέρωση",
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "The blockchain is still downloading, check again after it's up to date.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Ενημέρωση επαφής",
   "update_multiple_available": "Both a general and experimental release are available. It is not recommended that you install the experimental release unless you know what you're doing.",
   "update_testnet": "Το BRS δεν μπορεί να ενημερωθεί, όσο είστε συνδεμένος με το testnet.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Αυτός ο χρήστης δεν έχει μετοχές.",
   "user_no_transactions": "This user has no transactions.",
   "valid": "Έγκυρο",
+  "valid_thru": "Εγκυρο μέχρι",
   "validate": "Επιβεβαίωση",
   "validate_token": "Validate Token",
   "value_in_burst": "Τιμή σε burst",
+  "verified_source": "Επαληθευμένη και ασφαλής πηγή",
+  "verify": "Verify",
   "version": "Έκδοση",
   "view_more": "Δείτε περισσότερα",
   "view_owner_info_q": "View owner info?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Προσφέρετε προς πώληση αυτό το ψευδώνυμο.",
   "your_name": "Το όνομά σου",
   "your_passphrase": "Η φράση πρόσβασης σας",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
