--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -55,6 +55,7 @@
   "answers": "Answers",
   "application": "Application",
   "arbitrary_message": "Arbitrary Message",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Ask Order",
   "ask_order_cancellation": "Ask Order Cancellation",
   "ask_order_id": "Ask Order ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Want to choose your own passphrase? Click here.",
   "clear_results": "Clear Results",
   "clear_search_results": "Clear Search Results",
+  "click_for_changes": "Click here to see what has changed",
   "click_here_for_help": "Click here to know more about it",
   "click_here_to_enable": "Click here to enable it.",
   "click_to_apply": "Click to apply",
@@ -166,10 +168,12 @@
   "copy_asset_link": "Copy Asset Link",
   "copy_send_burst_link": "Copy 'Send BURST' Link",
   "copy_send_message_link": "Copy 'Send Message' Link",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Create Poll",
   "create_your_account": "Create Your Account",
   "current_price": "Current Price",
   "current_quantity": "Current Quantity",
+  "current_version": "Current version",
   "dashboard": "Dashboard",
   "data": "Data",
   "data_is_encrypted": "Data is encrypted.",
@@ -204,7 +208,8 @@
   "discount": "Discount",
   "do_not_broadcast": "Do Not Broadcast",
   "do_not_delete": "No, Do Not Delete",
-  "download_brs": "Download BRS",
+  "domain": "Domain",
+  "download": "Download",
   "downloaded": "Downloaded",
   "downloaded_hash": "Downloaded Hash",
   "downloaded_volume": "Downloaded Volume",
@@ -456,6 +461,7 @@
   "generation_signature": "Generation Signature",
   "generator": "Generator",
   "generator_public_key": "Generator Public Key",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Give Feedback",
   "give_feedback_q": "Give feedback?",
   "goods": "Goods",
@@ -488,6 +494,7 @@
   "is_scanning": "Is Scanning",
   "issue_asset": "Issue Asset",
   "issue_asset_warning": "Warning: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
+  "issuer": "Issuer",
   "item_name": "Item Name",
   "language": "Language",
   "last_block": "Last Block",
@@ -565,6 +572,10 @@
   "new_price": "New Price",
   "new_q_create_account": "New? Create Your Account!",
   "new_quantity": "New Quantity",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "New version",
   "newest_products": "Newest Products",
   "news": "News",
   "news_section_disabled": "The news section is currently disabled.",
@@ -602,6 +613,7 @@
   "no_transactions_found": "No transactions found",
   "no_transactions_in_block": "No transactions in this block.",
   "no_transactions_yet": "No transactions yet.",
+  "non_verified_source": "Unknown, potentially insecure source",
   "none": "None",
   "not_delivered_in_time": "Not delivered in time",
   "not_forging": "Not Forging",
@@ -631,6 +643,7 @@
   "open_orders": "Open Orders",
   "option_x": "option __x__",
   "options_are_binary": "Options are Binary",
+  "or": "or",
   "order": "Order",
   "order_date": "Order Date",
   "order_description": "Order Description",
@@ -706,6 +719,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Referenced Transaction Full Hash",
   "referenced_transaction_hash": "Referenced Transaction Hash",
   "refund": "Refund",
@@ -879,14 +893,17 @@
   "unconfirmed_transaction": "Unconfirmed Transaction",
   "unconfirmed_transactions": "Unconfirmed Transactions",
   "unknown": "Unknown",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Unsigned Transaction Bytes",
   "up_to_date_peers": "Up-to-date Peers",
   "update": "Update",
   "update_account_info": "Update Account Info",
   "update_alias": "Update Alias",
-  "update_available": "A new BRS release is available. It is recommended that you update.",
+  "update_available": "New update available",
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "The blockchain is still downloading, check again after it's up to date.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Update Contact",
   "update_multiple_available": "Both a general and experimental release are available. It is not recommended that you install the experimental release unless you know what you're doing.",
   "update_testnet": "BRS cannot be updated whilst connected to the testnet.",
@@ -900,9 +917,12 @@
   "user_no_assets": "This user has no assets.",
   "user_no_transactions": "This user has no transactions.",
   "valid": "Valid",
+  "valid_thru": "Valid thru",
   "validate": "Validate",
   "validate_token": "Validate Token",
   "value_in_burst": "Value in BURST",
+  "verified_source": "Verified and secure source",
+  "verify": "Verify",
   "version": "Version",
   "view_more": "View More",
   "view_owner_info_q": "View owner info?",
@@ -929,17 +949,5 @@
   "your_alias_sale_offer": "You are offering this alias for sale.",
   "your_name": "Your Name",
   "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
