--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -55,6 +55,7 @@
   "answers": "Vastaukset",
   "application": "Sovellus",
   "arbitrary_message": "Mielivaltainen viesti",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Myyntitoimeksianto",
   "ask_order_cancellation": "Myyntitoimeksiannon peruutus",
   "ask_order_id": "Myyntitoimeksiannon ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Haluatko valita oman tunnuslauseen? Klikkaa tästä.",
   "clear_results": "Tyhjennä  tulokset",
   "clear_search_results": "Tyhjennä hakutulokset",
+  "click_for_changes": "Klikkaa tästä nähdäksesi, mikä on muuttunut",
   "click_here_for_help": "Saat lisätietoja siitä napsauttamalla tätä",
   "click_here_to_enable": "Klikkaa tästä ottaaksesi sen käyttöön.",
   "click_to_claim": "Klikkaa tästä väittääksesi vapaan purskeen.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Kopioi arvopaperin linkki",
   "copy_send_burst_link": "Kopioi 'Lähetä BURST:tä' -linkki",
   "copy_send_message_link": "Kopioi 'Lähetä viesti' -linkki",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Luo galluppi",
   "create_your_account": "Luo tili",
   "current_price": "Nykyinen hinta",
   "current_quantity": "Nykyinen määrä",
+  "current_version": "Nykyinen versio",
   "dashboard": "Päänäkymä",
   "data": "Data",
   "data_is_encrypted": "Tiedot on salattu.",
@@ -202,7 +206,8 @@
   "discount": "Alennus",
   "do_not_broadcast": "Älä lähetä",
   "do_not_delete": "Ei, älä poista",
-  "download_brs": "Lataa BRS",
+  "domain": "verkkotunnuksen",
+  "download": "ladata",
   "downloaded": "Ladattu",
   "downloaded_hash": "Ladattu tarkiste",
   "downloaded_volume": "Ladattu määrä",
@@ -454,6 +459,7 @@
   "generation_signature": "Luonnin allekirjoitus",
   "generator": "Luoja",
   "generator_public_key": "Luojan julkinen avain",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Anna palautetta",
   "give_feedback_q": "Anna palautetta?",
   "goods": "Tavarat",
@@ -486,6 +492,7 @@
   "is_scanning": "Skannataan",
   "issue_asset": "Arvopaperin liikkeellelasku",
   "issue_asset_warning": "Varoitus: Et voi muuttaa näitä tietoja lähetyksen jälkeen, koskaan. Varmista, että tiedot ovat oikein.",
+  "issuer": "liikkeeseenlaskijan",
   "item_name": "Tuotteen nimi",
   "language": "Kieli",
   "last_block": "Viimeinen lohko",
@@ -554,6 +561,10 @@
   "new_price": "Uusi hinta",
   "new_q_create_account": "Uusi? Luo tili!",
   "new_quantity": "Uusi määrä",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Uusi versio",
   "newest_products": "Uusimmat tuotteet",
   "news": "Uutiset",
   "news_section_disabled": "Uutisosio on tällä hetkellä pois käytöstä.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Tapahtumia ei löytynyt",
   "no_transactions_in_block": "Ei tapahtumia tässä lohkossa.",
   "no_transactions_yet": "Ei tilitapahtumia.",
+  "non_verified_source": "Tuntematon, mahdollisesti turvaton lähde",
   "none": "Ei mitään",
   "not_delivered_in_time": "Ei toimitettu ajoissa",
   "not_forging": "Ei taontaa",
@@ -620,6 +632,7 @@
   "open_orders": "Avoimet toimeksiannot",
   "option_x": "vaihtoehto __x__",
   "options_are_binary": "Optiot ovat binäärioptioita",
+  "or": "or",
   "order": "Toimeksianto",
   "order_date": "Toimeksiannon päivä",
   "order_description": "Toimeksiannon kuvaus",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "Tämän tilin julkinen avain on jo ilmoitettu. Käytä tilinumeroa sen sijaan.",
   "recipient_unknown": "Vastaanottajan tili on tuntematon, eli sillä ei ole yhtään lähtevää tai saapuvaa tilitapahtumaa. Tarkista vielä vastaanottajan tilin oikeellisuus.",
   "recipient_unknown_pka": "Vastaanottajan tili on tuntematon, eli sillä ei ole yhtään saapuvaa tai lähtevää tilitapahtumaa. Jotta voit lähettää tämän pyynnön, sinun täytyy antaa myös vastaanottajan julkinen avain.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Viitatun tapahtuman koko tarkiste",
   "referenced_transaction_hash": "Viitatun tapahtuman tarkiste",
   "refund": "Maksun palautus",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Vahvistamaton transaktio",
   "unconfirmed_transactions": "Vahvistamattomia tapahtumia",
   "unknown": "Tuntematon",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Allekirjoittamattoman tapahtuman tavut",
   "up_to_date_peers": "Ajan tasalla olevat käyttäjät",
   "update": "Päivitys",
   "update_account_info": "Päivitä tilin tiedot",
   "update_alias": "Päivitä alias",
-  "update_available": "Uusi BRS versio on julkaistu. On suositeltavaa, että päivität ohjelman.",
+  "update_available": "Uusi päivitys saatavilla",
   "update_beta_available": "Uusi kokeellinen versio on saatavilla. Sen käyttöä ei suositella, ellet tiedä mitä olet tekemässä.",
   "update_blockchain_downloading": "Lohkoketjua ladataan edelleen, tarkista uudelleen kun se on ajan tasalla.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Päivitä yhteystieto",
   "update_multiple_available": "Sekä yleinen julkaisu- että testiversio on saatavilla. Testiversion käyttö on suositeltavaa vain jos todella tiedät mitä teet.",
   "update_testnet": "BRS:ää ei voi päivittää kun ollaan yhdistetty testiverkkoon.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Käyttäjällä ei ole arvopapereita.",
   "user_no_transactions": "Tällä käyttäjällä ei ole tapahtumia.",
   "valid": "Voimassa",
+  "valid_thru": "Voimassa jonnekin asti",
   "validate": "Validoida",
   "validate_token": "Validoi tunniste",
   "value_in_burst": "Arvo (BURST)",
+  "verified_source": "Vahvistettu ja turvallinen lähde",
+  "verify": "Verify",
   "version": "Versio",
   "view_more": "Näytä lisää",
   "view_owner_info_q": "Katso omistajan tietoja?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Tarjoat tätä aliasta myytäväksi.",
   "your_name": "Nimesi",
   "your_passphrase": "Tunnuslauseesi",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
