--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -55,6 +55,7 @@
   "answers": "Réponses",
   "application": "Application",
   "arbitrary_message": "Message arbitraire",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Ordre de vente",
   "ask_order_cancellation": "Annulation d'un ordre d'achat",
   "ask_order_id": "Identifiant de l'ordre d'achat",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Voulez-vous choisir votre propre phrase de passe ? Cliquez ici.",
   "clear_results": "Effacer les résultats",
   "clear_search_results": "Effacer les résultats de recherche",
+  "click_for_changes": "Cliquez ici pour voir ce qui a changé",
   "click_here_for_help": "Cliquez ici pour en savoir plus",
   "click_here_to_enable": "Cliquez ici pour l'activer.",
   "click_to_claim": "Cliquez ici pour réclamer votre rafale gratuite.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Copier le lien de l'actif",
   "copy_send_burst_link": "Copier le lien « Envoyer des BURST »",
   "copy_send_message_link": "Copier le lien « Envoyer un message »",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Créer un sondage",
   "create_your_account": "Créer un compte",
   "current_price": "Prix actuel",
   "current_quantity": "Quantité actuelle",
+  "current_version": "Version actuelle",
   "dashboard": "Tableau de bord",
   "data": "Données",
   "data_is_encrypted": "Ces données sont chiffrées.",
@@ -202,7 +206,8 @@
   "discount": "Promotion",
   "do_not_broadcast": "Ne pas diffuser",
   "do_not_delete": "Ne pas supprimer",
-  "download_brs": "Télécharger le client BRS",
+  "domain": "Domaine",
+  "download": "Télécharger",
   "downloaded": "Téléchargé",
   "downloaded_hash": "Hachage téléchargé",
   "downloaded_volume": "Volume de données téléchargé",
@@ -454,6 +459,7 @@
   "generation_signature": "Génération de la signature",
   "generator": "Générateur",
   "generator_public_key": "Générateur de clé publique",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Laisser un avis",
   "give_feedback_q": "Laisser un avis ?",
   "goods": "Marchandises",
@@ -486,6 +492,7 @@
   "is_scanning": "Analyse en cours",
   "issue_asset": "Émettre un actif",
   "issue_asset_warning": "Attention : une fois soumises, ces informations ne pourront plus jamais être modifiées. Veuillez vous assurer que tout est correct.",
+  "issuer": "Emetteur",
   "item_name": "Nom de l'article",
   "language": "Langue",
   "last_block": "Dernier bloc",
@@ -554,6 +561,10 @@
   "new_price": "Nouveau prix",
   "new_q_create_account": "Nouveau ? Créez votre compte !",
   "new_quantity": "Nouvelle quantité",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nouvelle version",
   "newest_products": "Produits les plus récents",
   "news": "Actualités",
   "news_section_disabled": "La rubrique Actualités est actuellement désactivée.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Aucune transaction",
   "no_transactions_in_block": "Aucune transaction dans ce bloc.",
   "no_transactions_yet": "Aucune transaction pour le moment.",
+  "non_verified_source": "Source inconnue, potentiellement non sécurisée",
   "none": "Aucun",
   "not_delivered_in_time": "Pas livré à temps",
   "not_forging": "Vous n'êtes pas en train de forger",
@@ -620,6 +632,7 @@
   "open_orders": "Mes ordres en cours",
   "option_x": "option __x__",
   "options_are_binary": "Les options sont binaires",
+  "or": "or",
   "order": "Ordre",
   "order_date": "Date de l'ordre",
   "order_description": "Description de l'ordre",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "La clé publique de ce compte est déjà annoncée. Utilisez l'ID de compte à la place.",
   "recipient_unknown": "Le compte bénéficiaire est un compte inconnu, ce qui signifie qu'il n'a jamais émis ou reçu de transaction. Veuillez vérifier l’adresse du bénéficiaire avant de soumettre.",
   "recipient_unknown_pka": "Le compte bénéficiaire est un compte inconnu, ce qui signifie qu'il n'a jamais reçu de transaction entrante ou envoyé de transaction sortante. Pour soumettre cette demande vous devez également fournir la clé publique du bénéficiaire.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Hachage complet de la transaction référencée",
   "referenced_transaction_hash": "Hachage de transaction référencée",
   "refund": "Rembourser",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Transaction non confirmée",
   "unconfirmed_transactions": "Transactions non confirmées",
   "unknown": "Inconnu",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Octets de transaction non signés",
   "up_to_date_peers": "Pairs à jour",
   "update": "Mise à jour",
   "update_account_info": "Mettre à jour les informations du compte",
   "update_alias": "Mettre à jour l'alias",
-  "update_available": "Une nouvelle version du client BRS est disponible. Nous vous recommandons de procéder à la mise à jour.",
+  "update_available": "Nouvelle mise à jour disponible",
   "update_beta_available": "Une nouvelle version bêta est disponible. Nous ne vous recommandons pas de l'installer, excepté si vous êtes absolument certain de savoir ce que vous faites.",
   "update_blockchain_downloading": "La blockchain est toujours en cours de téléchargement, vérifiez à nouveau lorsque celle-ci sera complètement synchronisée.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Mettre à jour le contact",
   "update_multiple_available": "Une version bêta et une version stable sont disponibles. Il n'est pas recommandé d'installer la version bêta à moins que vous soyez absolument certain de savoir ce que vous faites.",
   "update_testnet": "Le client BRS ne peut pas être mis à jour tant qu'il est connecté au testnet.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Cet utilisateur ne possède aucun actif.",
   "user_no_transactions": "Cet utilisateur n'a pas de transactions.",
   "valid": "Valider",
+  "valid_thru": "Valide jusqu'au",
   "validate": "Valider",
   "validate_token": "Valider un jeton",
   "value_in_burst": "Valeur en BURST",
+  "verified_source": "Source vérifiée et sécurisée",
+  "verify": "Verify",
   "version": "Version",
   "view_more": "Afficher plus",
   "view_owner_info_q": "Voir les informations du propriétaire ?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Vous avez mis cet alias en vente.",
   "your_name": "Votre nom",
   "your_passphrase": "Votre phrase de passe",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
