--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -55,6 +55,7 @@
   "answers": "जवाब",
   "application": "एप्लिकेशन",
   "arbitrary_message": "Arbitrary Message",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Ask Order",
   "ask_order_cancellation": "ऑर्डर रद्दीकरण से पूछो",
   "ask_order_id": "Ask Order ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "अपने खुद का passphrase चयन करना चाहते हैं? यहाँ क्लिक करें।",
   "clear_results": "परिणामों को साफ़ करें",
   "clear_search_results": "खोज परिणामों को साफ़ करें",
+  "click_for_changes": "जो बदल गया है उसे देखने के लिए यहां क्लिक करें",
   "click_here_for_help": "इसके बारे में अधिक जानने के लिए यहां क्लिक करें",
   "click_here_to_enable": "इसे सक्षम करने के लिए यहाँ क्लिक करें।",
   "click_to_claim": "अपने निःशुल्क बर्स्ट का दावा करने के लिए यहां क्लिक करें।",
@@ -164,10 +166,12 @@
   "copy_asset_link": "परिसंपत्ति लिंक कापी करें",
   "copy_send_burst_link": "'burst भेजें' लिंक कापी करें",
   "copy_send_message_link": "'संदेश भेजें' लिंक कापी करें",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "मतदान बनाएँ",
   "create_your_account": "अपना खाता बनाएँ",
   "current_price": "वर्तमान मूल्य",
   "current_quantity": "वर्तमान मात्रा",
+  "current_version": "वर्तमान संस्करण",
   "dashboard": "डैशबोर्ड",
   "data": "डेटा",
   "data_is_encrypted": "डेटा एन्क्रिप्ट किया गया है।",
@@ -202,7 +206,8 @@
   "discount": "डिस्काउंट",
   "do_not_broadcast": "प्रसारण नहीं है",
   "do_not_delete": "नहीं, मत हटाएँ",
-  "download_brs": "Download BRS",
+  "domain": "डोमेन",
+  "download": "डाउनलोड",
   "downloaded": "डाउनलोड हो चुकी",
   "downloaded_hash": "डाउनलोड किआ गआ हैश",
   "downloaded_volume": "डाउनलोड की गई मात्रा",
@@ -454,6 +459,7 @@
   "generation_signature": "Generation Signature",
   "generator": "जेनरेटर",
   "generator_public_key": "Generator Public Key",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "प्रतिक्रिया दें",
   "give_feedback_q": "प्रतिक्रिया दें?",
   "goods": "Goods",
@@ -486,6 +492,7 @@
   "is_scanning": "स्कैन कर रहा है",
   "issue_asset": "मुद्दा परिसंपत्ति",
   "issue_asset_warning": "Warning: Once submitted, you will not be able to change this information again, ever. Make sure it is correct.",
+  "issuer": "जारीकर्ता",
   "item_name": "आइटम का नाम",
   "language": "भाषा",
   "last_block": "पिछले ब्लॉक",
@@ -554,6 +561,10 @@
   "new_price": "नया मूल्य",
   "new_q_create_account": "नए हैं? अपना खाता बनाएँ!",
   "new_quantity": "नई मात्रा",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "नया संस्करण",
   "newest_products": "Newest Products",
   "news": "समाचार",
   "news_section_disabled": "समाचार अनुभाग वर्तमान में अक्षम किया गया है।",
@@ -591,6 +602,7 @@
   "no_transactions_found": "कोई लेन-देन नहीं मिले",
   "no_transactions_in_block": "इस ब्लाक में कोई लेन-देन नहीं।",
   "no_transactions_yet": "अभी तक कोई लेनदेन नहीं।",
+  "non_verified_source": "अज्ञात, संभावित असुरक्षित स्रोत",
   "none": "कोई नहीं",
   "not_delivered_in_time": "समय पर डिलीवर नहीं हुआ",
   "not_forging": "फोर्जिंग नहीं कर रहा",
@@ -620,6 +632,7 @@
   "open_orders": "आदेश खोलें",
   "option_x": "option __x__",
   "options_are_binary": "Options are Binary",
+  "or": "or",
   "order": "Order",
   "order_date": "आदेश दिनांक",
   "order_description": "ऑर्डर विवरण",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
   "recipient_unknown": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction. Please double check your recipient address before submitting.",
   "recipient_unknown_pka": "The recipient account is an unknown account, meaning it has never had an incoming or outgoing transaction.",
+  "record": "Record",
   "referenced_transaction_full_hash": "संदर्भित लेन-देन पूर्ण हैश",
   "referenced_transaction_hash": "संदर्भित लेनदेन हैश",
   "refund": "वापसी",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "अपुष्ट लेन-देन",
   "unconfirmed_transactions": "Unconfirmed Transactions",
   "unknown": "Unknown",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "अहस्ताक्षरित लेनदेन बाइट्स",
   "up_to_date_peers": "अप-टू-डेट साथिगण",
   "update": "अद्यतन",
   "update_account_info": "खाता जानकारी अद्यतन करें",
   "update_alias": "उपनाम अद्यतन करें",
-  "update_available": "एक नया BRS रिलीज उपलब्ध है। यह अनुशंसित है कि आप अपडेट करें।",
+  "update_available": "नई सूचना उपलब्ध है",
   "update_beta_available": "A new experimental release is available. It is not recommended that you install this unless you know what you're doing.",
   "update_blockchain_downloading": "The blockchain is still downloading, check again after it's up to date.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "संपर्क को अद्यतन",
   "update_multiple_available": "Both a general and experimental release are available. It is not recommended that you install the experimental release unless you know what you're doing.",
   "update_testnet": "BRS cannot be updated whilst connected to the testnet.",
@@ -887,9 +904,12 @@
   "user_no_assets": "इस उपयोगकर्ता के पास कोई संपत्ति नहीं है।",
   "user_no_transactions": "इस उपयोगकर्ता के कोई लेन-देन नहीं है।",
   "valid": "मान्य",
+  "valid_thru": "तक वैध",
   "validate": "मान्य करें",
   "validate_token": "टोकन मान्य करें",
   "value_in_burst": "burst में मान",
+  "verified_source": "सत्यापित और सुरक्षित स्रोत",
+  "verify": "Verify",
   "version": "संस्करण",
   "view_more": "देखें और अधिक",
   "view_owner_info_q": "मालिक जानकारी देखें?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "You are offering this alias for sale.",
   "your_name": "Your Name",
   "your_passphrase": "Your Passphrase",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
