--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -55,6 +55,7 @@
   "answers": "Jawaban",
   "application": "Aplikasi",
   "arbitrary_message": "Semaunya pesan",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Meminta Order",
   "ask_order_cancellation": "Meminta pembatalan pesanan",
   "ask_order_id": "Menanyakan ID pesanan",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Untuk memilih password Anda sendiri? Klik di sini.",
   "clear_results": "Hapus hasil",
   "clear_search_results": "Menghapus Hasil Pencarian",
+  "click_for_changes": "Klik di sini untuk melihat apa yang telah berubah",
   "click_here_for_help": "Klik di sini untuk mengetahui lebih banyak tentang itu",
   "click_here_to_enable": "Klik di sini untuk mengaktifkannya.",
   "click_to_claim": "Klik di sini untuk mengklaim Burst gratis Anda.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Salin Link aset",
   "copy_send_burst_link": "Salin Link 'Kirim BURST'",
   "copy_send_message_link": "Salin Link 'Kirim pesan'",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Buat Pemilihan",
   "create_your_account": "Membuat akun",
   "current_price": "Harga saat ini",
   "current_quantity": "Saat ini jumlah",
+  "current_version": "Versi sekarang",
   "dashboard": "Dasbor",
   "data": "Data",
   "data_is_encrypted": "Data dienkripsi.",
@@ -202,7 +206,8 @@
   "discount": "Diskon",
   "do_not_broadcast": "Jangan Menyiarkan",
   "do_not_delete": "Tidak, tidak menghapus",
-  "download_brs": "Unduh BRS",
+  "domain": "Domain",
+  "download": "Unduh",
   "downloaded": "Diunduh",
   "downloaded_hash": "Hash yang telah diunduh",
   "downloaded_volume": "Volume yang telah diunduh",
@@ -454,6 +459,7 @@
   "generation_signature": "Generasi Menandatangani",
   "generator": "Generator",
   "generator_public_key": "Generator Kunci Publik",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Berikan umpan balik",
   "give_feedback_q": "Berikan umpan balik?",
   "goods": "Barang",
@@ -486,6 +492,7 @@
   "is_scanning": "Pemindaian",
   "issue_asset": "Masalah Aset",
   "issue_asset_warning": "Peringatan: Setelah dikirim, anda tidak akan dapat mengubah informasi ini lagi, selamanya. Pastikan data yang dimasukkan benar.",
+  "issuer": "Penerbit",
   "item_name": "Nama Barang",
   "language": "Bahasa",
   "last_block": "Blok terakhir",
@@ -554,6 +561,10 @@
   "new_price": "Harga baru",
   "new_q_create_account": "Baru? Buat akun Anda!",
   "new_quantity": "Jumlah baru",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Versi baru",
   "newest_products": "Produk terbaru",
   "news": "Berita",
   "news_section_disabled": "Bagian berita saat ini tidak tersedia.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Tidak ada transaksi yang ditemukan",
   "no_transactions_in_block": "Tidak ada transaksi dalam blok ini.",
   "no_transactions_yet": "Belum ada transaksi.",
+  "non_verified_source": "Sumber tidak dikenal, berpotensi tidak aman",
   "none": "Tidak ada",
   "not_delivered_in_time": "Tidak dikirim tepat waktu",
   "not_forging": "Tidak penyusunan",
@@ -620,6 +632,7 @@
   "open_orders": "Perintah yang terbuka",
   "option_x": "pilihan __x__",
   "options_are_binary": "Pilihan adalah Biner",
+  "or": "or",
   "order": "Order",
   "order_date": "Tanggal Pemesanan",
   "order_description": "Deskripsi Urutan",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "Public key rekening ini telah diumumkan. Gunakan ID rekening.",
   "recipient_unknown": "Akun penerima adalah rekening yang tidak diketahui. Ini tidak pernah memiliki transaksi masuk atau keluar. Silahkan mengecek alamat penerima sebelum mengirimkan.",
   "recipient_unknown_pka": "Rekening penerima tidak diketahui, yang berarti rekening tersebut belum pernah memiliki transaksi masuk atau keluar. Untuk mengirimkan permintaan ini anda diharuskan menyediakan juga public key penerima.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Direferensikan transaksi penuh Hash",
   "referenced_transaction_hash": "Hash transaksi tereferensi",
   "refund": "Pembayaran kembali",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Transaksi yang belum dikonfirmasi",
   "unconfirmed_transactions": "Transaksi yang belum dikonfirmasi",
   "unknown": "tidak diketahui",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Transaksi Bytes tidak ditandatangani",
   "up_to_date_peers": "Peer Terbaru",
   "update": "Memperbarui",
   "update_account_info": "Memperbarui Info Akun",
   "update_alias": "Memperbarui Alias",
-  "update_available": "Rilis BRS baru tersedia. Dianjurkan bahwa Anda memperbarui.",
+  "update_available": "Pembaruan baru tersedia",
   "update_beta_available": "Percobaan rilis baru tersedia. Hal ini tidak dianjurkan bahwa Anda menginstal ini kecuali Anda adalah seorang ahli.",
   "update_blockchain_downloading": "Blockchain masih mengunduh, periksa kembali setelah selesai.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Memperbarui Kontak",
   "update_multiple_available": "Seorang jenderal dan versi percobaan tersedia. Hal ini tidak dianjurkan bahwa Anda menginstal versi percobaan kecuali Anda adalah seorang ahli.",
   "update_testnet": "BRS tidak dapat diperbarui sementara terhubung ke testnet.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Pengguna ini memiliki aset tidak.",
   "user_no_transactions": "Pengguna ini telah tidak ada transaksi.",
   "valid": "Berlaku",
+  "valid_thru": "Berlaku sampai",
   "validate": "Validasi",
   "validate_token": "Memvalidasi Token",
   "value_in_burst": "Nilai dalam BURST",
+  "verified_source": "Sumber terverifikasi dan aman",
+  "verify": "Verify",
   "version": "Versi",
   "view_more": "Lihat lebih",
   "view_owner_info_q": "Lihat info pemilik?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Anda menawarkan alias ini untuk dijual.",
   "your_name": "Namamu",
   "your_passphrase": "Kata sandi",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
