--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -55,6 +55,7 @@
   "answers": "回答",
   "application": "アプリケーション",
   "arbitrary_message": "任意のメッセージ",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "注文を尋ねる",
   "ask_order_cancellation": "注文のキャンセルを依頼",
   "ask_order_id": "注文IDを尋ねる",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "独自のパスフレーズを選択したい場合は、ここをクリックしてください。",
   "clear_results": "結果をクリア",
   "clear_search_results": "検索結果をクリア",
+  "click_for_changes": "変更点を確認するには、ここをクリックしてください。",
   "click_here_for_help": "それについての詳細を知るためにここをクリックしてください",
   "click_here_to_enable": "有効にするには、ここをクリックしてください。",
   "click_to_claim": "あなたの無料バーストを請求するにはここをクリックしてください。",
@@ -164,10 +166,12 @@
   "copy_asset_link": "アセットのリンクをコピー",
   "copy_send_burst_link": "「BURST を送信」のリンクをコピー",
   "copy_send_message_link": "「メッセージ送信」のリンクをコピー",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "投票調査を作成",
   "create_your_account": "アカウントを作成",
   "current_price": "現在の価格",
   "current_quantity": "現在の数量",
+  "current_version": "現行版",
   "dashboard": "ダッシュ ボード",
   "data": "データ",
   "data_is_encrypted": "データは暗号化されます。",
@@ -202,7 +206,8 @@
   "discount": "ディスカウント",
   "do_not_broadcast": "ブロードキャストしない",
   "do_not_delete": "いいえ、削除しないでください。",
-  "download_brs": "BRSをダウンロード",
+  "domain": "ドメイン",
+  "download": "ダウンロード",
   "downloaded": "ダウンロード済み",
   "downloaded_hash": "ダウンロードされたハッシュ",
   "downloaded_volume": "ダウンロード量",
@@ -454,6 +459,7 @@
   "generation_signature": "署名発行",
   "generator": "ジェネレーター",
   "generator_public_key": "公開キーのジェネレーター",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "フィードバックを与える",
   "give_feedback_q": "フィードバックをしますか。",
   "goods": "商品",
@@ -486,6 +492,7 @@
   "is_scanning": "スキャン中",
   "issue_asset": "資産発行",
   "issue_asset_warning": "警告: 一度送信すると、二度とこの情報を変更することはできません。正しいことを確認してください。",
+  "issuer": "発行者",
   "item_name": "アイテム名",
   "language": "言語",
   "last_block": "最後のブロック",
@@ -554,6 +561,10 @@
   "new_price": "新価格",
   "new_q_create_account": "初めてですか？ アカウントを作成してください！",
   "new_quantity": "新しい数量",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "新しいバージョン",
   "newest_products": "最新の製品",
   "news": "ニュース",
   "news_section_disabled": "ニュースセクションは現在無効です。",
@@ -591,6 +602,7 @@
   "no_transactions_found": "トランザクションが見つかりません",
   "no_transactions_in_block": "このブロックにはトランザクションがありません。",
   "no_transactions_yet": "トランザクションがまだありません。",
+  "non_verified_source": "未知の、潜在的に安全でない情報源",
   "none": "なし",
   "not_delivered_in_time": "時間内に配信されず",
   "not_forging": "鋳造していません",
@@ -620,6 +632,7 @@
   "open_orders": "オープン注文",
   "option_x": "オプション__x__",
   "options_are_binary": "オプションはバイナリです",
+  "or": "or",
   "order": "注文",
   "order_date": "注文日",
   "order_description": "注文の内容",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "このアカウントの公開キーは既に発表されています。そのアカウントIDを代わりにお使いください。",
   "recipient_unknown": "受信者のアカウントは不明なアカウントです。ということは、これまでトランザクションを受信・発信したことがないということを意味します。送信する前に受信者のアドレスを再度チェックしてください。",
   "recipient_unknown_pka": "受信者のアカウントは不明なアカウントです。ということは、これまでトランザクションを発信・送信したことがないということを意味します。このリクエストを提出するには、受信者の公開キーも供給しなければなりません。",
+  "record": "Record",
   "referenced_transaction_full_hash": "参照先トランザクションの完全ハッシュ",
   "referenced_transaction_hash": "参照先のトランザクションハッシュ",
   "refund": "払い戻し",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "未確認のトランザクション",
   "unconfirmed_transactions": "未確認の取引",
   "unknown": "不明",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "符号なしのトランザクションのバイト",
   "up_to_date_peers": "最新のピア",
   "update": "アップデート",
   "update_account_info": "アカウント情報を更新",
   "update_alias": "エイリアスを更新",
-  "update_available": "新しいBRS リリースが利用できます。更新することをお勧めします。",
+  "update_available": "新しいアップデートがあります",
   "update_beta_available": "新しい試験的リリースが利用可能です。ただあなたが自身が何をやっているか理解していない限り、試験的リリースのインストールは推奨しません。",
   "update_blockchain_downloading": "ブロックチェーンはまだダウンロード中です。最新になってから再度チェックしてください。",
+  "update_burst_account": "Update your burst account",
   "update_contact": "連絡先を更新",
   "update_multiple_available": "実際のリリースと試験的リリースの両方が可能です。ただあなたが自身が何をやっているか理解していない限り、試験的リリースのインストールは推奨しません。",
   "update_testnet": "テストネットに接続中はBRSを更新できません。",
@@ -887,9 +904,12 @@
   "user_no_assets": "このユーザーには資産がありません。",
   "user_no_transactions": "このユーザーはトランザクションがありません。",
   "valid": "有効",
+  "valid_thru": "Thru有効な",
   "validate": "検証",
   "validate_token": "トークンを検証",
   "value_in_burst": "BURST での価値",
+  "verified_source": "検証済みの安全なソース",
+  "verify": "Verify",
   "version": "バージョン",
   "view_more": "もっと見る",
   "view_owner_info_q": "所有者の情報を表示しますか？",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "あなたはこのエイリアスを売りに出しています。",
   "your_name": "名前",
   "your_passphrase": "あなたのパスフレーズ",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
