--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -55,6 +55,7 @@
   "answers": "Respostas",
   "application": "Aplicativo",
   "arbitrary_message": "Mensagem arbitrária",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Ordem de venda",
   "ask_order_cancellation": "Cancelamento da Ordem de Venda",
   "ask_order_id": "ID da ordem de venda",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Quer escolher sua própria senha? Clique aqui.",
   "clear_results": "Limpar Resultados",
   "clear_search_results": "Limpar os Resultados da Pesquisa",
+  "click_for_changes": "Clique aqui para ver o que mudou",
   "click_here_for_help": "Clique aqui para saber mais sobre isso",
   "click_here_to_enable": "Clique aqui para ativá-lo.",
   "click_to_claim": "Clique aqui para ganhar seu Burst grátis.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Copy Asset Link",
   "copy_send_burst_link": "Copy 'Send BURST' Link",
   "copy_send_message_link": "Copy 'Send Message' Link",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Criar Enquete",
   "create_your_account": "Crie a Sua Conta",
   "current_price": "Preço Atual",
   "current_quantity": "Quantidade Atual",
+  "current_version": "Versão Atual",
   "dashboard": "Painel Administrativo",
   "data": "Dados",
   "data_is_encrypted": "Dados são criptografados.",
@@ -202,7 +206,8 @@
   "discount": "Desconto",
   "do_not_broadcast": "Não Transmitir",
   "do_not_delete": "Não, Não Apagar",
-  "download_brs": "Download BRS",
+  "domain": "Domínio",
+  "download": "Baixar",
   "downloaded": "Baixado",
   "downloaded_hash": "Hash Baixado",
   "downloaded_volume": "Volume Baixado",
@@ -454,6 +459,7 @@
   "generation_signature": "Assinatura de geração",
   "generator": "Gerador",
   "generator_public_key": "Chave pública do gerador",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Comentar",
   "give_feedback_q": "Comentar?",
   "goods": "Mercadorias",
@@ -486,6 +492,7 @@
   "is_scanning": "Escaneando",
   "issue_asset": "Emitir ativo",
   "issue_asset_warning": "Uma vez enviado, você não será capaz de alterar essas informações, nunca mais. Verifique se tudo está correto.",
+  "issuer": "Emissor",
   "item_name": "Nome do Item",
   "language": "Idioma",
   "last_block": "Último bloco",
@@ -554,6 +561,10 @@
   "new_price": "Preço novo",
   "new_q_create_account": "Novo? Crie a sua conta!",
   "new_quantity": "Nova quantidade",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nova versão",
   "newest_products": "Produtos mais recentes",
   "news": "Notícias",
   "news_section_disabled": "A seção de notícias está desativada no momento.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Nenhuma transação encontrada",
   "no_transactions_in_block": "Não há transações neste bloco.",
   "no_transactions_yet": "Nenhuma transação ainda.",
+  "non_verified_source": "Fonte desconhecida e potencialmente insegura",
   "none": "Nenhum",
   "not_delivered_in_time": "Não entregue a tempo",
   "not_forging": "Não está forjando",
@@ -620,6 +632,7 @@
   "open_orders": "Ordens abertas",
   "option_x": "opção __x__",
   "options_are_binary": "As opções são binárias",
+  "or": "or",
   "order": "Ordem",
   "order_date": "Data da ordem",
   "order_description": "Descrição da ordem",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "A chave pública desta conta já foi declarada. Use o ID de conta no lugar dela.",
   "recipient_unknown": "A conta de destino é desconhecida, o que significa que nunca recebeu nem enviou nenhuma transação. Por favor, confirme a conta de destino antes de enviar.",
   "recipient_unknown_pka": "A conta do destinatário é uma conta desconhecida, ou seja, nunca houve uma transação de entrada ou de saída. Você pode aumentar a segurança, fornecendo a chave pública do destinatário.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Hash completo da transação referenciada",
   "referenced_transaction_hash": "Hash da transação referenciada",
   "refund": "Reembolsar",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Transação não confirmada",
   "unconfirmed_transactions": "Transações não confirmadas",
   "unknown": "Desconhecido",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Bytes da transação não assinada",
   "up_to_date_peers": "Pares atualizados",
   "update": "Atualização",
   "update_account_info": "Atualizar informações da conta",
   "update_alias": "Atualizar Pseudônimo",
-  "update_available": "Uma nova versão BRS está disponível. É recomendável que você atualize.",
+  "update_available": "Nova atualização disponível",
   "update_beta_available": "Uma nova versão experimental está disponível. Não é recomendável que você a instale a não ser que você saiba o que está fazendo.",
   "update_blockchain_downloading": "A corrente de blocos ainda está sendo baixada, verifique novamente após estar atualizada.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Atualizar o contato",
   "update_multiple_available": "Tanto a versão geral como a experimental estão disponíveis. Não é recomendável que você instale a versão experimental, a menos que você saiba o que está fazendo.",
   "update_testnet": "BRS não pode ser atualizado enquanto conectado ao testnet.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Este usuário não possui ativos.",
   "user_no_transactions": "Este usuário não tem nenhuma transação.",
   "valid": "Válido",
+  "valid_thru": "Válido até",
   "validate": "Validar",
   "validate_token": "Validar o Token",
   "value_in_burst": "Valor em burst",
+  "verified_source": "Fonte verificada e segura",
+  "verify": "Verify",
   "version": "Versão",
   "view_more": "Ver mais",
   "view_owner_info_q": "Exibir informações do proprietário?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Você está oferecendo este pseudônimo para venda.",
   "your_name": "Seu nome",
   "your_passphrase": "Sua senha",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
