--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -55,6 +55,7 @@
   "answers": "Respostas",
   "application": "Aplicativo",
   "arbitrary_message": "Mensagem Arbitrária",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Ordens de Venda",
   "ask_order_cancellation": "Cancelar Ordem de Venda",
   "ask_order_id": "ID de Ordem de Venda",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Quer escolher a sua própria senha? Clique aqui.",
   "clear_results": "Limpar Resultados",
   "clear_search_results": "Limpar Resultado de Pesquisa",
+  "click_for_changes": "Clique aqui para ver o que mudou",
   "click_here_for_help": "Clique aqui para saber mais sobre isso",
   "click_here_to_enable": "Clique aqui para ativá-lo.",
   "click_to_claim": "Clique aqui para ganhar seu Burst grátis.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Copiar Enlace do Ativo",
   "copy_send_burst_link": "Copiar o Enlace \"Enviar BURST",
   "copy_send_message_link": "Copiar o enlace \"Enviar Mensagem",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Criar Enquete",
   "create_your_account": "Crie a sua conta",
   "current_price": "Preço Atual",
   "current_quantity": "Quantidade Atual",
+  "current_version": "Versão Atual",
   "dashboard": "Painel Administrativo",
   "data": "Dados",
   "data_is_encrypted": "Os dados estão cifrados.",
@@ -202,7 +206,8 @@
   "discount": "Desconto",
   "do_not_broadcast": "Não transmitir",
   "do_not_delete": "Não, Não Apagar",
-  "download_brs": "Descarregar BRS",
+  "domain": "Domínio",
+  "download": "Baixar",
   "downloaded": "Descarregado",
   "downloaded_hash": "Hash Descarregado",
   "downloaded_volume": "Volume Descarregado",
@@ -454,6 +459,7 @@
   "generation_signature": "Assinatura de Geração",
   "generator": "Gerador",
   "generator_public_key": "Chave Pública do Gerador",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Deixar Valoração",
   "give_feedback_q": "Deixar comentário?",
   "goods": "Mercadorias",
@@ -486,6 +492,7 @@
   "is_scanning": "Escaneando",
   "issue_asset": "Emitir Ativo",
   "issue_asset_warning": "Aviso: Uma vez enviado, você não será capaz de alterar essas informações, nunca mais. Verifique se está correcto.",
+  "issuer": "Emissor",
   "item_name": "Nome do Artigo",
   "language": "Idioma",
   "last_block": "Último Bloco",
@@ -554,6 +561,10 @@
   "new_price": "Preço Novo",
   "new_q_create_account": "Novo? Crie a sua conta!",
   "new_quantity": "Nova Quantidade",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nova versão",
   "newest_products": "Produtos Mais Recentes",
   "news": "Notícias",
   "news_section_disabled": "A secção de notícias está desabilitada.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Não se encontraram transacções",
   "no_transactions_in_block": "Não há transações neste bloco.",
   "no_transactions_yet": "Ainda não há transações.",
+  "non_verified_source": "Fonte desconhecida e potencialmente insegura",
   "none": "Nenhum",
   "not_delivered_in_time": "Não entregue a tempo",
   "not_forging": "Não está forjando",
@@ -620,6 +632,7 @@
   "open_orders": "Ordens abertas",
   "option_x": "opção __x__",
   "options_are_binary": "As Opções são Binárias",
+  "or": "or",
   "order": "Ordem",
   "order_date": "Data da Ordem",
   "order_description": "Descrição da Ordem",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "A chave pública desta conta já foi declarada. Empregue a ID de conta no seu lugar.",
   "recipient_unknown": "A conta de destino é desconhecida, o que significa que nunca recebeu nem enviou nenhuma transação. Por favor, confirme a conta de destino antes de enviar.",
   "recipient_unknown_pka": "A conta de destino é uma conta desconhecida, o que significa que nunca recebeu nem enviou transação nenhuma. Para fazer este envio, deve fornecer também a chave pública da conta de destino.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Hash Completo da Transação Referenciada",
   "referenced_transaction_hash": "Hash da Transação de Referência",
   "refund": "Reembolso",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Transação Não Confirmada",
   "unconfirmed_transactions": "Transações Sem Confirmar",
   "unknown": "Desconhecido",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Bytes da Transação Não Assinada",
   "up_to_date_peers": "Pares Atualizados",
   "update": "Atualizar",
   "update_account_info": "Atualizar Informação de Conta",
   "update_alias": "Atualizar o Alias",
-  "update_available": "Uma nova versão de BRS está disponível. É recomendável que você atualize.",
+  "update_available": "Nova atualização disponível",
   "update_beta_available": "Está disponível uma versão experimental. Não se aconselha instalá-la se nom sabe bem o que está a fazer.",
   "update_blockchain_downloading": "A corrente de blocos ainda está sendo descarregada, verifique novamente após o término do download.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Atualizar Contato",
   "update_multiple_available": "Tanto a versão geral como a experimental estão disponíveis. Não é recomendável que você instale a versão experimental, a menos que você saiba o que está fazendo.",
   "update_testnet": "BRS não pode ser atualizado enquanto conectado à rede de provas.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Este usuário não possui ativos.",
   "user_no_transactions": "Este usuário não tem nenhuma transação.",
   "valid": "Válido",
+  "valid_thru": "Válido até",
   "validate": "Validar",
   "validate_token": "Validar Identificador",
   "value_in_burst": "Valor em BURST",
+  "verified_source": "Fonte verificada e segura",
+  "verify": "Verify",
   "version": "Versão",
   "view_more": "Ver Mais",
   "view_owner_info_q": "Ver informação do proprietário?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Você está oferecendo este alias para venda.",
   "your_name": "O Seu Nome",
   "your_passphrase": "A sua senha",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
