--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -55,6 +55,7 @@
   "answers": "Răspunsuri",
   "application": "Aplicație",
   "arbitrary_message": "Mesaj arbitrar",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Ordin vânzare",
   "ask_order_cancellation": "Anulare Ordin Vânzare",
   "ask_order_id": "ID Ordin Vânzare",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Dorești să alegi propria parolă? Fă clic aici.",
   "clear_results": "Șterge rezultate",
   "clear_search_results": "Șterge Rezultate Căutare",
+  "click_for_changes": "Faceți clic aici pentru a vedea ce sa schimbat",
   "click_here_for_help": "Faceți clic aici pentru a afla mai multe despre el",
   "click_here_to_enable": "Click aici pentru activare.",
   "click_to_claim": "Faceți clic aici pentru a revendica explozia liberă.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Copiaţi Link Activă",
   "copy_send_burst_link": "Copiaţi linkul \"Trimite burst\"",
   "copy_send_message_link": "Copiaţi linkul \"Trimite Mesaj\"",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Creați Sondaj",
   "create_your_account": "Crează-ţi Contul",
   "current_price": "Preț Actual",
   "current_quantity": "Cantitate Actuală",
+  "current_version": "Versiune curentă",
   "dashboard": "Panou Control",
   "data": "Date",
   "data_is_encrypted": "Datele sunt criptate.",
@@ -202,7 +206,8 @@
   "discount": "Reducere",
   "do_not_broadcast": "Nu Transmite",
   "do_not_delete": "Nu, nu ştergeţi",
-  "download_brs": "Download BRS",
+  "domain": "Domeniu",
+  "download": "Descarca",
   "downloaded": "Descărcat",
   "downloaded_hash": "Hash Descarcat",
   "downloaded_volume": "Volumul Descărcat",
@@ -454,6 +459,7 @@
   "generation_signature": "Generare semnătură",
   "generator": "Generator",
   "generator_public_key": "Cheia Publică Generator",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Oferiți Feedback",
   "give_feedback_q": "Oferiți feedback-ul?",
   "goods": "Bunuri",
@@ -486,6 +492,7 @@
   "is_scanning": "Scanează",
   "issue_asset": "Emitere Activă",
   "issue_asset_warning": "Odată înregistrată, această informaţie nu se va mai putea schimba niciodată. Asigură-te că este corectă.",
+  "issuer": "emitent",
   "item_name": "Nume Articol",
   "language": "Limba",
   "last_block": "Ultimul Bloc",
@@ -554,6 +561,10 @@
   "new_price": "Preț Nou",
   "new_q_create_account": "Ești nou aici? Crează-ţi contul!",
   "new_quantity": "Nouă Cantitate",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Versiune noua",
   "newest_products": "Cele mai noi produse",
   "news": "Știri",
   "news_section_disabled": "Secţiunea de ştiri este în prezent dezactivată.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Nu s-au găsit tranzacții",
   "no_transactions_in_block": "Nu sunt tranzacţii în acest bloc.",
   "no_transactions_yet": "Încă nu sunt tranzacţii.",
+  "non_verified_source": "Sursă necunoscută, potențial nesigură",
   "none": "Niciuna",
   "not_delivered_in_time": "Nelivrat la timp",
   "not_forging": "Nu Forjează",
@@ -620,6 +632,7 @@
   "open_orders": "Ordine Deschise",
   "option_x": "opţiunea __x__",
   "options_are_binary": "Opţiunile sunt Binare",
+  "or": "or",
   "order": "Ordin",
   "order_date": "Dată Ordin",
   "order_description": "Descriere Ordin",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "Cheia publică a acestui cont a fost anunţată deja. Utilizează ID-ul tău de cont.",
   "recipient_unknown": "Contul destinatarului este un cont necunoscut, ceea ce înseamnă că nu a avut niciodată o tranzacţie de intrare sau ieşire. Te rugăm să verifici adresa destinatarului înainte de a tranzacționa.",
   "recipient_unknown_pka": "Contul destinatarului este un cont de necunoscut, ceea ce înseamnă că nu a avut niciodată o tranzacţie de intrare sau ieşire. Puteţi mări securitatea prin furnizarea cheii publice a destinatarului.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Hash-ul complet al tranzacției referențiate",
   "referenced_transaction_hash": "Hash-ul tranzacției referențiate",
   "refund": "Rambursează",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Tranzacţie Neconfirmată",
   "unconfirmed_transactions": "Tranzacţiile Neconfirmate",
   "unknown": "Necunoscut(ă)",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Bytes-ii Tranzacției Nesemnalate",
   "up_to_date_peers": "Peers de actualizat",
   "update": "Actualizare",
   "update_account_info": "Actualizare Informaţii Cont",
   "update_alias": "Actualizare Alias",
-  "update_available": "Ai la dispoziţie o nouă versiune de BRS. Se recomandă actualizarea.",
+  "update_available": "Este disponibilă o nouă actualizare",
   "update_beta_available": "Ai la dispoziţie o nouă versiune experimentală. Nu este recomandat să o instalezi dacă nu ştii ce faci.",
   "update_blockchain_downloading": "Blockchain-ul este încă în descărcare, verifică din nou după ce este actualizat.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Actualizare Contact",
   "update_multiple_available": "Aveţi la dispoziţie o eliberare de versiuni generală şi experimentală. Nu este recomandat să instalaţi versiunea experimentală dacă nu ştiți ce faceți.",
   "update_testnet": "BRS nu poate fi actualizat în timp ce e conectat la testnet.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Acest utilizator nu are active.",
   "user_no_transactions": "Acest utilizator nu are nici o tranzacţie.",
   "valid": "Corect",
+  "valid_thru": "Valabil prin",
   "validate": "Validare",
   "validate_token": "Validează Token",
   "value_in_burst": "Valoarea în burst",
+  "verified_source": "Sursă verificată și sigură",
+  "verify": "Verify",
   "version": "Versiune",
   "view_more": "Vezi mai multe",
   "view_owner_info_q": "Vrei să vezi informatii despre proprietar?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Ai pus acest alias la vânzare.",
   "your_name": "Numele tău",
   "your_passphrase": "Parola ta",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
