--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -55,6 +55,7 @@
   "answers": "Одговори",
   "application": "Апликација",
   "arbitrary_message": "Произвољна Порука",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Тражите Поруџбину",
   "ask_order_cancellation": "Статус",
   "ask_order_id": "Тражи ID Поруџбине",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Желите одабрати властиту лозинку? Кликните овде.",
   "clear_results": "Обриши Резултате",
   "clear_search_results": "Обришите Резултате Претраге",
+  "click_for_changes": "Кликните овде да видите шта се променило",
   "click_here_for_help": "Кликните овде да бисте сазнали више о томе",
   "click_here_to_enable": "Кликните овде да га омогућите.",
   "click_to_claim": "Кликните овде да бисте затражили ваш бесплатни Бурст.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Копирајте Линк Ассет-а",
   "copy_send_burst_link": "Копирајте линк 'Пошаљи BURST'",
   "copy_send_message_link": "Копирајте Линк 'Пошаљи Поруку'",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Нова Анкета",
   "create_your_account": "Креирајте Ваш Налог",
   "current_price": "Тренутна Цена",
   "current_quantity": "Тренутна Количина",
+  "current_version": "Тренутна верзија",
   "dashboard": "Командна табла",
   "data": "Подаци",
   "data_is_encrypted": "Подаци су заштићени.",
@@ -202,7 +206,8 @@
   "discount": "Попуст",
   "do_not_broadcast": "Не Емитуј",
   "do_not_delete": "Не, Немојте да Обришете",
-  "download_brs": "Преузмите BRS",
+  "domain": "Домаин",
+  "download": "Преузимање",
   "downloaded": "Преузето",
   "downloaded_hash": "Преузет Hash",
   "downloaded_volume": "Преузета Kоличина",
@@ -454,6 +459,7 @@
   "generation_signature": "Генерисање Потписа",
   "generator": "Генератор",
   "generator_public_key": "Генератор Јавног Кључа",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Оставите повратну информацију",
   "give_feedback_q": "Оставите повратну информацију?",
   "goods": "Роба",
@@ -486,6 +492,7 @@
   "is_scanning": "Претражује се",
   "issue_asset": "Издајте Ассет",
   "issue_asset_warning": "Упозорење: Након потврде више никада нећете моћи променити ову информацију. Проверите њену исправност.",
+  "issuer": "Издавалац",
   "item_name": "Назив производа/ услуге",
   "language": "Језик",
   "last_block": "Посљедњи блок",
@@ -554,6 +561,10 @@
   "new_price": "Нова Цена",
   "new_q_create_account": "Нови сте? Креирајте свој налог!",
   "new_quantity": "Нови Износ",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Нова верзија",
   "newest_products": "Најновији Производи",
   "news": "Вести",
   "news_section_disabled": "Секција са вестима је тренутно онемогућена.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Трансакција није пронађена",
   "no_transactions_in_block": "Нема трансакција у овом блоку.",
   "no_transactions_yet": "Без трансакција.",
+  "non_verified_source": "Непознати, потенцијално несигуран извор",
   "none": "Ништа",
   "not_delivered_in_time": "Није испоручено на време",
   "not_forging": "Тренутно не кујете",
@@ -620,6 +632,7 @@
   "open_orders": "Отворене Поруџбине",
   "option_x": "опција __x__",
   "options_are_binary": "Опције су Бинарне",
+  "or": "or",
   "order": "Редослед",
   "order_date": "Датум Поруџбине",
   "order_description": "Опис Поруџбине",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "Јавни кључ овог налога је већ оглашен. Користите ИД налога уместо јавног кључа.",
   "recipient_unknown": "Налог примаоца је непознат налог, што значи да никада није имао долазећу или одлазећу трансакцију. Молимо Вас да проверите још једном адресу примаоца пре него што наставите.",
   "recipient_unknown_pka": "Налог примаоца је непознат налог, што значи да никада није имао долазну или oдлазну трансакцију. Да бисте потврдили ваш избор морате да прецизирате јавни кључ примаоца.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Комплетан Hash Референтне Трансакције",
   "referenced_transaction_hash": "Hash Означене Трансакције",
   "refund": "Рефундација",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Непотврђена Трансакција",
   "unconfirmed_transactions": "Непотврђена Трансакција",
   "unknown": "Непознато",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Непотписана Трансакција Bytes",
   "up_to_date_peers": "Ажурирани Peers-i",
   "update": "Ажурирање",
   "update_account_info": "Ажурирајте Информације Hалога",
   "update_alias": "Ажурирајте Алиас",
-  "update_available": "Нова верзија BRS-а је доступна. Препоручујемо вам ажурирање.",
+  "update_available": "Доступно је ново ажурирање",
   "update_beta_available": "Нова експериментална верзија је доступна. Нине препоручено да је инсталирате уколико не знате шта радите.",
   "update_blockchain_downloading": "Blockchain је још увек у фази учитавања, проверите поново након завршетка процеса.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Ажурирај Контакт",
   "update_multiple_available": "Доступне су обе верзије, основна и експериментална. Није препоручљива инсталација експерименталне верзије уколико нисте сигурни шта радите.",
   "update_testnet": "BRS није могуће ажурирати док је спојен на тестнет.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Овај корисник не поседује ассет-е.",
   "user_no_transactions": "Овај корисник нема трансакција.",
   "valid": "Важећи",
+  "valid_thru": "Валид тхру",
   "validate": "Потврдите",
   "validate_token": "Потврдите Токен",
   "value_in_burst": "Вредност у BURST-у",
+  "verified_source": "Верификован и сигуран извор",
+  "verify": "Verify",
   "version": "Верзија",
   "view_more": "Види више",
   "view_owner_info_q": "Погледајте информације власника?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Ви нудите овај алиас на продају.",
   "your_name": "Ваше Име",
   "your_passphrase": "Ваша Лозинка",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
