--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -55,6 +55,7 @@
   "answers": "答案",
   "application": "應用程序",
   "arbitrary_message": "任意信息",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "賣單",
   "ask_order_cancellation": "買單取消",
   "ask_order_id": "賣單 ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "想選擇您自己的密碼? 請單擊此處。",
   "clear_results": "清除結果",
   "clear_search_results": "清除搜尋結果",
+  "click_for_changes": "点击此处查看更改内容",
   "click_here_for_help": "点击这里了解更多信息",
   "click_here_to_enable": "點擊此處啟用它。",
   "click_to_claim": "点击此处声明您的免费Burst。",
@@ -164,10 +166,12 @@
   "copy_asset_link": "複製資產鏈接",
   "copy_send_burst_link": "複製“發送 BURST\"連結",
   "copy_send_message_link": "複製 '發送消息'鏈接",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "創建投票",
   "create_your_account": "創建您的帳戶",
   "current_price": "當前價格",
   "current_quantity": "當前數量",
+  "current_version": "当前版本",
   "dashboard": "面板",
   "data": "數據",
   "data_is_encrypted": "數據是加密的。",
@@ -202,7 +206,8 @@
   "discount": "折扣",
   "do_not_broadcast": "不要廣播",
   "do_not_delete": "不，不要刪除",
-  "download_brs": "下载 BRS",
+  "domain": "域",
+  "download": "下载",
   "downloaded": "已下載",
   "downloaded_hash": "已下載的哈希",
   "downloaded_volume": "下載量",
@@ -454,6 +459,7 @@
   "generation_signature": "生成簽名",
   "generator": "產生者",
   "generator_public_key": "生成公匙",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "給出反饋",
   "give_feedback_q": "給出反饋?",
   "goods": "商品",
@@ -486,6 +492,7 @@
   "is_scanning": "正在掃描",
   "issue_asset": "發行資產",
   "issue_asset_warning": "警告： 一旦提交，您將永遠不能修改此信息。請確保其正確。",
+  "issuer": "发行者",
   "item_name": "商品名稱",
   "language": "語言",
   "last_block": "最新區塊",
@@ -554,6 +561,10 @@
   "new_price": "新的價格",
   "new_q_create_account": "新接觸？創建您的帳戶 ！",
   "new_quantity": "新的数量",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "新版本",
   "newest_products": "最新產品",
   "news": "新聞",
   "news_section_disabled": "新聞版塊目前停用。",
@@ -591,6 +602,7 @@
   "no_transactions_found": "未找到交易",
   "no_transactions_in_block": "該區塊中沒有交易。",
   "no_transactions_yet": "沒有交易記錄",
+  "non_verified_source": "未知，可能不安全的来源",
   "none": "無",
   "not_delivered_in_time": "未按時交付",
   "not_forging": "未鍛造",
@@ -620,6 +632,7 @@
   "open_orders": "開放訂單",
   "option_x": "選項 __x__",
   "options_are_binary": "選項是二進制的",
+  "or": "or",
   "order": "訂單",
   "order_date": "訂單日期",
   "order_description": "訂單描述",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "該帳戶的公鑰已經公佈。使用帳戶ID來代替。",
   "recipient_unknown": "接收者帳戶是未知帳戶，意味著它沒有轉入或轉出的交易。請在提交之前再次檢查您的接收者地址。",
   "recipient_unknown_pka": "接收者賬戶是未知帳戶，意味著它從來沒有轉入或轉出的交易記錄。為了提交該請求，您還必須提供接收者的公鑰。",
+  "record": "Record",
   "referenced_transaction_full_hash": "参考交易完整哈希",
   "referenced_transaction_hash": "參考交易哈希",
   "refund": "退款",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "未確認的交易",
   "unconfirmed_transactions": "未確認的交易",
   "unknown": "未知",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "未簽名的交易字節",
   "up_to_date_peers": "最新節點",
   "update": "更新",
   "update_account_info": "更新帳戶信息",
   "update_alias": "更新別名",
-  "update_available": "新的 BRS 發佈了。建議您更新。",
+  "update_available": "有新的更新可用",
   "update_beta_available": "一個新的測試版本可用。推薦您不要安裝，除非您知道您在做什麽。",
   "update_blockchain_downloading": "Blockchain仍在下載，請更新之後再檢查。",
+  "update_burst_account": "Update your burst account",
   "update_contact": "更新聯絡人",
   "update_multiple_available": "通用版本和測試版本均可用。建議您不要安裝測試版本，除非您知道在做什麽。",
   "update_testnet": "當連接到測試網絡時,不能更新 BRS 。",
@@ -887,9 +904,12 @@
   "user_no_assets": "該用戶沒有資產。",
   "user_no_transactions": "此用戶沒有交易記錄。",
   "valid": "有效",
+  "valid_thru": "有效通过",
   "validate": "確認",
   "validate_token": "驗證令牌",
   "value_in_burst": "以BURST計算的價值",
+  "verified_source": "验证和安全的来源",
+  "verify": "Verify",
   "version": "版本",
   "view_more": "查看更多",
   "view_owner_info_q": "查看所有者資料？",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "您的該別名正在出售。",
   "your_name": "您的名字",
   "your_passphrase": "您的密碼",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
