--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -55,6 +55,7 @@
   "answers": "Odgovori",
   "application": "Aplikacija",
   "arbitrary_message": "Proizvoljna poruka",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "Prodajni nalog",
   "ask_order_cancellation": "Otkazivanje prodajnog naloga",
   "ask_order_id": "ID prodajnog naloga",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "Želite odabrati vlastitu lozinku? Kliknite ovdje.",
   "clear_results": "Obriši Rezultate",
   "clear_search_results": "Obriši rezultate pretraživanja",
+  "click_for_changes": "Kliknite ovdje da biste vidjeli što se promijenilo",
   "click_here_for_help": "Kliknite ovdje da biste saznali više o tome",
   "click_here_to_enable": "Kliknite ovdje za omogućavanje.",
   "click_to_claim": "Kliknite ovdje da biste zatražili vaš besplatni Burst.",
@@ -164,10 +166,12 @@
   "copy_asset_link": "Kopiraj poveznicu asseta",
   "copy_send_burst_link": "Kopiraj 'pošalji BURST' poveznicu",
   "copy_send_message_link": "Kopiraj poveznicu 'Pošalji poruku'",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "Kreiraj anketu",
   "create_your_account": "Kreirajte vaš račun",
   "current_price": "Trenutna cijena",
   "current_quantity": "Trenutna količina",
+  "current_version": "Trenutna verzija",
   "dashboard": "Kontrolna ploča",
   "data": "Podaci",
   "data_is_encrypted": "Podaci su zaštićeni.",
@@ -202,7 +206,8 @@
   "discount": "Popust",
   "do_not_broadcast": "Ne emitiraj",
   "do_not_delete": "Nemoj brisati",
-  "download_brs": "Preuzmite BRS",
+  "domain": "Domena",
+  "download": "preuzimanje datoteka",
   "downloaded": "Preuzeto",
   "downloaded_hash": "Preuzeti hash",
   "downloaded_volume": "Preuzeta količina",
@@ -454,6 +459,7 @@
   "generation_signature": "Generiranje potpisa",
   "generator": "Generator",
   "generator_public_key": "Generator javnog ključa",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "Povratna informacija",
   "give_feedback_q": "Ostavite povratnu informaciju?",
   "goods": "Roba",
@@ -486,6 +492,7 @@
   "is_scanning": "Pretražuje se",
   "issue_asset": "Izdaj asset",
   "issue_asset_warning": "Upozorenje: Nakon potvrde više nikad nećete moći promijeniti ovu informaciju. Provjerite njezinu ispravnost.",
+  "issuer": "izdavatelj",
   "item_name": "Ime artikla",
   "language": "Jezik",
   "last_block": "Posljednji blok",
@@ -554,6 +561,10 @@
   "new_price": "Nova cijena",
   "new_q_create_account": "Ovdje ste novi? Kreirajte vaš račun!",
   "new_quantity": "Nova količina",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "Nova verzija",
   "newest_products": "Najnoviji proizvodi",
   "news": "Vijesti",
   "news_section_disabled": "Kategorija vijesti je trenutno onemogućena.",
@@ -591,6 +602,7 @@
   "no_transactions_found": "Transakcija nije pronađena",
   "no_transactions_in_block": "Nema transakcija u ovom bloku.",
   "no_transactions_yet": "Još uvijek bez transakcija.",
+  "non_verified_source": "Nepoznati, potencijalno nesiguran izvor",
   "none": "Ništa",
   "not_delivered_in_time": "Nije isporučeno na vrijeme",
   "not_forging": "Kovanje nije započeto",
@@ -620,6 +632,7 @@
   "open_orders": "Otvoreni nalozi",
   "option_x": "opcija __x__",
   "options_are_binary": "Opcije su binarne",
+  "or": "or",
   "order": "Redoslijed",
   "order_date": "Datum naloga",
   "order_description": "Opis naloga",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "Javni ključ ovog računa je već oglašen. Koristite ID računa umjesto javnog ključa.",
   "recipient_unknown": "Račun primatelja je nepoznat, što znači da nikada nije imao dolazeću ili odlazeću transakciju. Molimo provjerite još jednom adresu primatelja prije slanja.",
   "recipient_unknown_pka": "Račun primaoca je nepoznat račun, što znači da nikada nije imao dolaznu ili odlaznu transakciju. Račun ima saldo od __burst__ BURST-a. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ primaoca.",
+  "record": "Record",
   "referenced_transaction_full_hash": "Referentna transakcija kompletan hash",
   "referenced_transaction_hash": "Hash upućene transakcije",
   "refund": "Povrat",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "Nepotvrđena transakcija",
   "unconfirmed_transactions": "Nepotvrđene transakcije",
   "unknown": "Nepoznat",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "Nepotpisan transaction bytes",
   "up_to_date_peers": "Ažurirani peersi",
   "update": "Ažuriranje",
   "update_account_info": "Ažurirajte podatke računa",
   "update_alias": "Ažuriraj pseudonime",
-  "update_available": "Nova inačica BRS-a je dostupna. Preporučujemo vam ažuriranje.",
+  "update_available": "Dostupno je novo ažuriranje",
   "update_beta_available": "Dostupna je nova eksperimentalna inačica. Ova instalacija se ne preporuča ukoliko niste sigurni što radite.",
   "update_blockchain_downloading": "Blockchain je još uvijek u fazi učitavanja, provjerite ponovo nakon završetka procesa.",
+  "update_burst_account": "Update your burst account",
   "update_contact": "Ažuriraj kontakt",
   "update_multiple_available": "Dostupne su obje inačice, osnovna i eksperimentalna. Nije preporučljivo instaliranje eksperimentalne inačice ukoliko niste sigurni što radite.",
   "update_testnet": "BRS nije moguće nadograditi za vrijeme spoja na testnet.",
@@ -887,9 +904,12 @@
   "user_no_assets": "Ovaj korisnik nema asseta.",
   "user_no_transactions": "Ovaj korisnik nema transakcija.",
   "valid": "Važeći",
+  "valid_thru": "Vrijedi do",
   "validate": "Potvrdite",
   "validate_token": "Provjera tokena",
   "value_in_burst": "Vrijednost u BURST",
+  "verified_source": "Potvrđen i siguran izvor",
+  "verify": "Verify",
   "version": "Inačica",
   "view_more": "Vidi više",
   "view_owner_info_q": "Pogledaj informacije o vlasniku?",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "Ponudili ste ovaj pseudonim na prodaju.",
   "your_name": "Vaše ime",
   "your_passphrase": "Vaša lozinka",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
