--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -55,6 +55,7 @@
   "answers": "答案",
   "application": "应用程序",
   "arbitrary_message": "任意信息",
+  "are_you_sure": "Do you you really want to send Burst to them?",
   "ask_order": "卖单",
   "ask_order_cancellation": "卖单取消",
   "ask_order_id": "卖单 ID",
@@ -133,6 +134,7 @@
   "choose_own_passphrase": "想选择您自己的密码？请单击此处。",
   "clear_results": "清除结果",
   "clear_search_results": "清除搜索结果",
+  "click_for_changes": "点击此处查看更改内容",
   "click_here_for_help": "点击这里了解更多信息",
   "click_here_to_enable": "点击此处启用它。",
   "click_to_claim": "点击此处声明您的免费Burst。",
@@ -164,10 +166,12 @@
   "copy_asset_link": "复制资产链接",
   "copy_send_burst_link": "复制“发送 BURST\"链接",
   "copy_send_message_link": "复制“发送信息”链接",
+  "create_passive": "Create a new account without passphrase",
   "create_poll": "创建投票",
   "create_your_account": "创建您的帐户",
   "current_price": "当前价格",
   "current_quantity": "当前数量",
+  "current_version": "当前版本",
   "dashboard": "面板",
   "data": "数据",
   "data_is_encrypted": "数据是加密的。",
@@ -202,7 +206,8 @@
   "discount": "折扣",
   "do_not_broadcast": "不要广播",
   "do_not_delete": "不，不要删除",
-  "download_brs": "下载 BRS",
+  "domain": "域",
+  "download": "下载",
   "downloaded": "已下载",
   "downloaded_hash": "已下载的哈希",
   "downloaded_volume": "下载量",
@@ -454,6 +459,7 @@
   "generation_signature": "生成签名",
   "generator": "产生者",
   "generator_public_key": "生成公钥",
+  "get_burst_account": "Get your free Burst account now.",
   "give_feedback": "给出反馈",
   "give_feedback_q": "给出反馈？",
   "goods": "商品",
@@ -486,6 +492,7 @@
   "is_scanning": "正在扫描",
   "issue_asset": "发行资产",
   "issue_asset_warning": "警告： 一旦提交，您将永远不能修改此信息。请确保其正确。",
+  "issuer": "发行者",
   "item_name": "商品名称",
   "language": "语言",
   "last_block": "最新区块",
@@ -554,6 +561,10 @@
   "new_price": "新的价格",
   "new_q_create_account": "新接触？创建您的帐户 ！",
   "new_quantity": "新的数量",
+  "new_user_no": "No, I have an account",
+  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
+  "new_user_yes": "Yes, I'm a new user",
+  "new_version": "新版本",
   "newest_products": "最新产品",
   "news": "新闻",
   "news_section_disabled": "新闻版块目前已停用。",
@@ -591,6 +602,7 @@
   "no_transactions_found": "未找到交易",
   "no_transactions_in_block": "该区块中没有交易。",
   "no_transactions_yet": "没有交易记录。",
+  "non_verified_source": "未知，可能不安全的来源",
   "none": "无",
   "not_delivered_in_time": "未按时交付",
   "not_forging": "未锻造",
@@ -620,6 +632,7 @@
   "open_orders": "开放订单",
   "option_x": "选项 __x__",
   "options_are_binary": "选项是二进制的",
+  "or": "or",
   "order": "订单",
   "order_date": "订单日期",
   "order_description": "订单描述",
@@ -695,6 +708,7 @@
   "recipient_public_key_already_announced": "该账户的公钥已经公布。使用帐户 ID 来代替。",
   "recipient_unknown": "接收者帐户是未知帐户，意味着它没有转入或转出的交易。请在提交之前再次确认您的接收者地址。",
   "recipient_unknown_pka": "接收者帐户是未知帐户，意味着它从来没有转入或转出的交易记录。为了提交该请求，您还必须提供接收者的公钥。",
+  "record": "Record",
   "referenced_transaction_full_hash": "参考交易完整哈希",
   "referenced_transaction_hash": "参考交易哈希",
   "refund": "退款",
@@ -866,14 +880,17 @@
   "unconfirmed_transaction": "未确认的交易",
   "unconfirmed_transactions": "未确认的交易",
   "unknown": "未知",
+  "unknown_recipients": "Unknown Recipients Detected",
+  "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "unsigned_transaction_bytes": "未签名的交易字节",
   "up_to_date_peers": "最新节点",
   "update": "更新",
   "update_account_info": "更新帐户信息",
   "update_alias": "更新别名",
-  "update_available": "新的 BRS 发布了。建议您更新。",
+  "update_available": "有新的更新可用",
   "update_beta_available": "一个新的测试版本可用。推荐您不要安装，除非您知道您在做什么。",
   "update_blockchain_downloading": "Blockchain 仍在下载，请更新之后再检查。",
+  "update_burst_account": "Update your burst account",
   "update_contact": "更新联系人",
   "update_multiple_available": "通用版本和测试版本均可用。建议您不要安装测试版本，除非您知道在做什么。",
   "update_testnet": "当连接到测试网络时，不能更新 BRS 。",
@@ -887,9 +904,12 @@
   "user_no_assets": "该用户没有资产。",
   "user_no_transactions": "该用户没有交易记录。",
   "valid": "有效",
+  "valid_thru": "有效通过",
   "validate": "确认",
   "validate_token": "验证令牌",
   "value_in_burst": "以BURST计算的价值",
+  "verified_source": "验证和安全的来源",
+  "verify": "Verify",
   "version": "版本",
   "view_more": "查看更多",
   "view_owner_info_q": "查看所有者资料？",
@@ -916,17 +936,5 @@
   "your_alias_sale_offer": "您的该别名正在出售。",
   "your_name": "您的名称",
   "your_passphrase": "您的密码",
-  "youve_got_burst": "You've got Burst!",
-  "update_burst_account": "Update your burst account",
-  "record": "Record",
-  "verify": "Verify",
-  "unknown_recipients": "Unknown Recipients Detected",
-  "unknown_recipients_text": "The following recipient(s) could not be validated:",
-  "are_you_sure": "Do you you really want to send Burst to them?",
-  "get_burst_account": "Get your free Burst account now.",
-  "new_user_text": "Are you a new user? Create a new account and became a new Burst member.",
-  "new_user_yes": "Yes, I'm a new user",
-  "new_user_no": "No, I have an account",
-  "create_passive": "Create a new account without passphrase",
-  "or": "or"
+  "youve_got_burst": "You've got Burst!"
 }
